# Eren-Launcher

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  ROADMAP.md
src/eren_launcher/: __init__.py  auth.py  bedrock.py  cli.py  downloader.py  gui.py  instance_store.py  java_manager.py  launch.py  manifest.py  microsoft_oauth.py  models.py  process_runner.py  providers.py  resolver.py  runtime.py
tests/: test_auth.py  test_bedrock_launch.py  test_downloader.py  test_gui.py  test_instance_store.py  test_java_manager.py  test_launch.py  test_oauth.py  test_process_runner.py  test_providers.py  test_resolver.py  test_runtime.py
